fixed padding on navbar to eliminate h scroll on mobile

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -82,6 +82,10 @@ header{
     height: 120px;
 
 }
+
+.navbar {
+    padding: 0;
+}
 /*
 .main-title{
     font-size: 1.5rem;
@@ -121,6 +125,11 @@ header{
 
     #technology-table{
         height: 800px;;
+    }
+
+    .nav-item {
+        padding-right: 0;
+        padding-left: 0;
     }
 
 }
